--- a/react-d'lish/src/index.css
+++ b/react-d'lish/src/index.css
@@ -1,4 +1,6 @@
+/* Fonts  */
 @import url("https://fonts.cdnfonts.com/css/trebuchet-ms-2");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;800&display=swap");
 
 @tailwind base;
 @tailwind components;
