--- a/react-d'lish/src/index.css
+++ b/react-d'lish/src/index.css
@@ -5,3 +5,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Clases personalizadas */
+.card {
+    @apply bg-base rounded overflow-hidden shadow-md relative;
+}
+
+.badge {
+    @apply bg-prim text-white text-sm uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2;
+}
+
+.btn {
+    @apply rounded-full py-2 px-3 uppercase text-xs font-bold cursor-pointer tracking-wider;
+}
