--- a/react-d'lish/src/index.css
+++ b/react-d'lish/src/index.css
@@ -65,3 +65,25 @@ input {
   background-color: #555;
   border-radius: 5px; /* Bordes redondeados */
 }
+
+/* Elpepe */
+.custom-shape-divider-bottom-1689480383 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+  transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1689480383 svg {
+  position: relative;
+  display: block;
+  width: calc(139% + 1.3px);
+  height: 201px;
+}
+
+.custom-shape-divider-bottom-1689480383 .shape-fill {
+  fill: #020617;
+}
