--- a/react-d'lish/src/index.css
+++ b/react-d'lish/src/index.css
@@ -104,8 +104,8 @@ input {
   }
 }
 
-/* Division Tilt - base-100 */
-.custom-shape-divider-bottom-1689489905 {
+/* Division tilt - base-100 */
+.custom-shape-divider-bottom-1689492744 {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -115,59 +115,20 @@ input {
   transform: rotate(180deg);
 }
 
-.custom-shape-divider-bottom-1689489905 svg {
-  position: relative;
-  display: block;
-  width: calc(300% + 1.3px);
-  height: 275px;
-}
-
-.custom-shape-divider-bottom-1689489905 .shape-fill {
-  fill: #000000;
-}
-
-/** For tablet devices **/
-@media (min-width: 768px) and (max-width: 1023px) {
-  .custom-shape-divider-bottom-1689489905 svg {
-      width: calc(300% + 1.3px);
-      height: 87px;
-  }
-}
-
-/** For mobile devices **/
-@media (max-width: 767px) {
-  .custom-shape-divider-bottom-1689489905 svg {
-      width: calc(148% + 1.3px);
-      height: 52px;
-  }
-}
-
-/* Division tilt 2 */
-.custom-shape-divider-bottom-1689491668 {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  overflow: hidden;
-  line-height: 0;
-  transform: rotate(180deg);
-}
-
-.custom-shape-divider-bottom-1689491668 svg {
+.custom-shape-divider-bottom-1689492744 svg {
   position: relative;
   display: block;
   width: calc(100% + 1.3px);
   height: 78px;
-  transform: rotateY(180deg);
 }
 
-.custom-shape-divider-bottom-1689491668 .shape-fill {
+.custom-shape-divider-bottom-1689492744 .shape-fill {
   fill: #141414;
 }
 
 /** For tablet devices **/
 @media (min-width: 768px) and (max-width: 1023px) {
-  .custom-shape-divider-bottom-1689491668 svg {
+  .custom-shape-divider-bottom-1689492744 svg {
       width: calc(100% + 1.3px);
       height: 87px;
   }
@@ -175,7 +136,61 @@ input {
 
 /** For mobile devices **/
 @media (max-width: 767px) {
-  .custom-shape-divider-bottom-1689491668 svg {
+  .custom-shape-divider-bottom-1689492744 svg {
+      width: calc(148% + 1.3px);
+      height: 52px;
+  }
+}
+
+/** For tablet devices **/
+@media (min-width: 768px) and (max-width: 1023px) {
+  .custom-shape-divider-bottom-1689492651 svg {
+      width: calc(100% + 1.3px);
+      height: 87px;
+  }
+}
+
+/** For mobile devices **/
+@media (max-width: 767px) {
+  .custom-shape-divider-bottom-1689492651 svg {
+      width: calc(148% + 1.3px);
+      height: 52px;
+  }
+}
+
+/* Division tilt - base-200 */
+.custom-shape-divider-top-1689493240 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-top-1689493240 svg {
+  position: relative;
+  display: block;
+  width: calc(100% + 1.3px);
+  height: 78px;
+  transform: rotateY(180deg);
+}
+
+.custom-shape-divider-top-1689493240 .shape-fill {
+  fill: #141414;
+}
+
+/** For tablet devices **/
+@media (min-width: 768px) and (max-width: 1023px) {
+  .custom-shape-divider-top-1689493240 svg {
+      width: calc(100% + 1.3px);
+      height: 87px;
+  }
+}
+
+/** For mobile devices **/
+@media (max-width: 767px) {
+  .custom-shape-divider-top-1689493240 svg {
       width: calc(148% + 1.3px);
       height: 52px;
   }
