Index 70/100 - Imagenes a Src y Algunos estilos

--- a/react-d'lish/src/index.css
+++ b/react-d'lish/src/index.css
@@ -19,12 +19,12 @@
   @apply rounded-2xl py-2 px-3 uppercase  font-bold cursor-pointer tracking-wider;
 }
 
-.fa-custom{
-  @apply animate-fade animate-duration-[900ms] animate-ease-in-out
+.fa-custom {
+  @apply animate-fade animate-duration-[900ms] animate-ease-in-out;
 }
 
-.fu-custom{
-  @apply animate-duration-[780ms] animate-ease-in-out
+.fu-custom {
+  @apply animate-duration-[780ms] animate-ease-in-out;
 }
 
 /* Estilos propios */
@@ -32,8 +32,8 @@
   @apply mt-5 pb-2 border-b border-gray-200 flex;
 }
 
-.title-form {
-  @apply text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white text-center uppercase font-title;
+.title-text {
+  @apply bg-clip-text text-transparent bg-gradient-to-r  font-title font-bold;
 }
 
 .content-form-center {
