Ajustando algo... - Mini cambio en el footer - Añadido nuevo navbar al layout de perfil - Página de ajustes de usuario (sin función jajaja)

--- a/react-d'lish/src/index.css
+++ b/react-d'lish/src/index.css
@@ -31,6 +31,14 @@
   @apply hidden md:block font-bold text-base self-center text-white transition-all
 }
 
+.profile-banner{
+  background-image: url("../src/assets/img/banner.jpg");
+}
+
+.shadow-profile{
+  box-shadow: inset 0px -29px 8px 0px rgba(0,0,0,0.1);
+}
+
 /* Estilos propios */
 .li-elem {
   @apply mt-5 pb-2 border-b border-gray-200 flex;
