--- a/react-d'lish/src/css/IndexPage.css
+++ b/react-d'lish/src/css/IndexPage.css
@@ -1,3 +1,7 @@
+.card-popular {
+  @apply card card-side flex items-center justify-center mx-5 text-white
+}
+
 .food-type {
   @apply text-center text-xl bg-white rounded-2xl flex justify-center items-center max-w-sm bg-cover bg-center;
 }
